--- a/nb.ipynb
+++ b/nb.ipynb
@@ -59,18 +59,65 @@
     {
       "cell_type": "code",
       "source": [
+        "def is_colab():\n",
+        "    \"\"\"Check if the code is running in Google Colab.\"\"\"\n",
+        "    try:\n",
+        "        import google.colab\n",
+        "        return True\n",
+        "    except ImportError:\n",
+        "        return False\n",
+        "\n",
+        "# Use the function to conditionally run magic commands\n",
+        "if is_colab():\n",
+        "    # Run Colab-specific magic commands\n",
+        "    !rm -rf colabtest\n",
+        "    !git clone https://github.com/juan-carvajal/colabtest.git\n",
+        "    !cp -R colabtest/* .\n",
+        "    # Add any other Colab-specific setup\n",
+        "else:\n",
+        "    # Alternative setup for non-Colab environments\n",
+        "    print(\"Not running in Colab\")"
+      ],
+      "metadata": {
+        "id": "mekK1h8Krcqz",
+        "outputId": "2e2982d3-4ea8-48df-ec25-94d0dea6002b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "mekK1h8Krcqz",
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'colabtest'...\n",
+            "remote: Enumerating objects: 18, done.\u001b[K\n",
+            "remote: Counting objects:   5% (1/18)\u001b[K\rremote: Counting objects:  11% (2/18)\u001b[K\rremote: Counting objects:  16% (3/18)\u001b[K\rremote: Counting objects:  22% (4/18)\u001b[K\rremote: Counting objects:  27% (5/18)\u001b[K\rremote: Counting objects:  33% (6/18)\u001b[K\rremote: Counting objects:  38% (7/18)\u001b[K\rremote: Counting objects:  44% (8/18)\u001b[K\rremote: Counting objects:  50% (9/18)\u001b[K\rremote: Counting objects:  55% (10/18)\u001b[K\rremote: Counting objects:  61% (11/18)\u001b[K\rremote: Counting objects:  66% (12/18)\u001b[K\rremote: Counting objects:  72% (13/18)\u001b[K\rremote: Counting objects:  77% (14/18)\u001b[K\rremote: Counting objects:  83% (15/18)\u001b[K\rremote: Counting objects:  88% (16/18)\u001b[K\rremote: Counting objects:  94% (17/18)\u001b[K\rremote: Counting objects: 100% (18/18)\u001b[K\rremote: Counting objects: 100% (18/18), done.\u001b[K\n",
+            "remote: Compressing objects:   7% (1/13)\u001b[K\rremote: Compressing objects:  15% (2/13)\u001b[K\rremote: Compressing objects:  23% (3/13)\u001b[K\rremote: Compressing objects:  30% (4/13)\u001b[K\rremote: Compressing objects:  38% (5/13)\u001b[K\rremote: Compressing objects:  46% (6/13)\u001b[K\rremote: Compressing objects:  53% (7/13)\u001b[K\rremote: Compressing objects:  61% (8/13)\u001b[K\rremote: Compressing objects:  69% (9/13)\u001b[K\rremote: Compressing objects:  76% (10/13)\u001b[K\rremote: Compressing objects:  84% (11/13)\u001b[K\rremote: Compressing objects:  92% (12/13)\u001b[K\rremote: Compressing objects: 100% (13/13)\u001b[K\rremote: Compressing objects: 100% (13/13), done.\u001b[K\n",
+            "remote: Total 18 (delta 3), reused 8 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects:   5% (1/18)\rReceiving objects:  11% (2/18)\rReceiving objects:  16% (3/18)\rReceiving objects:  22% (4/18)\rReceiving objects:  27% (5/18)\rReceiving objects:  33% (6/18)\rReceiving objects:  38% (7/18)\rReceiving objects:  44% (8/18)\rReceiving objects:  50% (9/18)\rReceiving objects:  55% (10/18)\rReceiving objects:  61% (11/18)\rReceiving objects:  66% (12/18)\rReceiving objects:  72% (13/18)\rReceiving objects:  77% (14/18)\rReceiving objects:  83% (15/18)\rReceiving objects:  88% (16/18)\rReceiving objects:  94% (17/18)\rReceiving objects: 100% (18/18)\rReceiving objects: 100% (18/18), done.\n",
+            "Resolving deltas:   0% (0/3)\rResolving deltas:  33% (1/3)\rResolving deltas:  66% (2/3)\rResolving deltas: 100% (3/3)\rResolving deltas: 100% (3/3), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "with open('test.txt', 'r') as f:\n",
         "  print(f.read())"
       ],
       "metadata": {
         "id": "k_VNUu_UoK18",
-        "outputId": "6a2dda0a-f3dd-4d62-8f45-ad4d38a6e933",
+        "outputId": "4d427482-ef7a-47a7-ef4c-77b397470b97",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "k_VNUu_UoK18",
-      "execution_count": 17,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
