--- a/nb.ipynb
+++ b/nb.ipynb
@@ -2,62 +2,24 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
-      "id": "2212d3e4",
+      "execution_count": null,
+      "id": "mekK1h8Krcqz",
       "metadata": {
-        "id": "2212d3e4",
-        "outputId": "58eac55c-f1ef-4701-ff43-d69b7e309181",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mekK1h8Krcqz",
+        "outputId": "2e2982d3-4ea8-48df-ec25-94d0dea6002b"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "hello world\n"
+            "Not running in Colab\n"
           ]
         }
       ],
-      "source": [
-        "print(\"hello world\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!rm -rf colabtest\n",
-        "!git clone https://github.com/juan-carvajal/colabtest.git\n",
-        "!cp -R colabtest/* ."
-      ],
-      "metadata": {
-        "id": "EUOwfwhsoB9Y",
-        "outputId": "64db4b85-c26f-4bc0-ca9b-1bf5f2c3a265",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "EUOwfwhsoB9Y",
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Cloning into 'colabtest'...\n",
-            "remote: Enumerating objects: 15, done.\u001b[K\n",
-            "remote: Counting objects:   6% (1/15)\u001b[K\rremote: Counting objects:  13% (2/15)\u001b[K\rremote: Counting objects:  20% (3/15)\u001b[K\rremote: Counting objects:  26% (4/15)\u001b[K\rremote: Counting objects:  33% (5/15)\u001b[K\rremote: Counting objects:  40% (6/15)\u001b[K\rremote: Counting objects:  46% (7/15)\u001b[K\rremote: Counting objects:  53% (8/15)\u001b[K\rremote: Counting objects:  60% (9/15)\u001b[K\rremote: Counting objects:  66% (10/15)\u001b[K\rremote: Counting objects:  73% (11/15)\u001b[K\rremote: Counting objects:  80% (12/15)\u001b[K\rremote: Counting objects:  86% (13/15)\u001b[K\rremote: Counting objects:  93% (14/15)\u001b[K\rremote: Counting objects: 100% (15/15)\u001b[K\rremote: Counting objects: 100% (15/15), done.\u001b[K\n",
-            "remote: Compressing objects:  10% (1/10)\u001b[K\rremote: Compressing objects:  20% (2/10)\u001b[K\rremote: Compressing objects:  30% (3/10)\u001b[K\rremote: Compressing objects:  40% (4/10)\u001b[K\rremote: Compressing objects:  50% (5/10)\u001b[K\rremote: Compressing objects:  60% (6/10)\u001b[K\rremote: Compressing objects:  70% (7/10)\u001b[K\rremote: Compressing objects:  80% (8/10)\u001b[K\rremote: Compressing objects:  90% (9/10)\u001b[K\rremote: Compressing objects: 100% (10/10)\u001b[K\rremote: Compressing objects: 100% (10/10), done.\u001b[K\n",
-            "remote: Total 15 (delta 1), reused 8 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects:   6% (1/15)\rReceiving objects:  13% (2/15)\rReceiving objects:  20% (3/15)\rReceiving objects:  26% (4/15)\rReceiving objects:  33% (5/15)\rReceiving objects:  40% (6/15)\rReceiving objects:  46% (7/15)\rReceiving objects:  53% (8/15)\rReceiving objects:  60% (9/15)\rReceiving objects:  66% (10/15)\rReceiving objects:  73% (11/15)\rReceiving objects:  80% (12/15)\rReceiving objects:  86% (13/15)\rReceiving objects:  93% (14/15)\rReceiving objects: 100% (15/15)\rReceiving objects: 100% (15/15), done.\n",
-            "Resolving deltas:   0% (0/1)\rResolving deltas: 100% (1/1)\rResolving deltas: 100% (1/1), done.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "source": [
         "def is_colab():\n",
         "    \"\"\"Check if the code is running in Google Colab.\"\"\"\n",
@@ -70,66 +32,46 @@
         "# Use the function to conditionally run magic commands\n",
         "if is_colab():\n",
         "    # Run Colab-specific magic commands\n",
+        "    print(\"Running in Colab, executing magic commands.\")\n",
         "    !rm -rf colabtest\n",
         "    !git clone https://github.com/juan-carvajal/colabtest.git\n",
         "    !cp -R colabtest/* .\n",
         "    # Add any other Colab-specific setup\n",
         "else:\n",
         "    # Alternative setup for non-Colab environments\n",
-        "    print(\"Not running in Colab\")"
-      ],
-      "metadata": {
-        "id": "mekK1h8Krcqz",
-        "outputId": "2e2982d3-4ea8-48df-ec25-94d0dea6002b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "mekK1h8Krcqz",
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Cloning into 'colabtest'...\n",
-            "remote: Enumerating objects: 18, done.\u001b[K\n",
-            "remote: Counting objects:   5% (1/18)\u001b[K\rremote: Counting objects:  11% (2/18)\u001b[K\rremote: Counting objects:  16% (3/18)\u001b[K\rremote: Counting objects:  22% (4/18)\u001b[K\rremote: Counting objects:  27% (5/18)\u001b[K\rremote: Counting objects:  33% (6/18)\u001b[K\rremote: Counting objects:  38% (7/18)\u001b[K\rremote: Counting objects:  44% (8/18)\u001b[K\rremote: Counting objects:  50% (9/18)\u001b[K\rremote: Counting objects:  55% (10/18)\u001b[K\rremote: Counting objects:  61% (11/18)\u001b[K\rremote: Counting objects:  66% (12/18)\u001b[K\rremote: Counting objects:  72% (13/18)\u001b[K\rremote: Counting objects:  77% (14/18)\u001b[K\rremote: Counting objects:  83% (15/18)\u001b[K\rremote: Counting objects:  88% (16/18)\u001b[K\rremote: Counting objects:  94% (17/18)\u001b[K\rremote: Counting objects: 100% (18/18)\u001b[K\rremote: Counting objects: 100% (18/18), done.\u001b[K\n",
-            "remote: Compressing objects:   7% (1/13)\u001b[K\rremote: Compressing objects:  15% (2/13)\u001b[K\rremote: Compressing objects:  23% (3/13)\u001b[K\rremote: Compressing objects:  30% (4/13)\u001b[K\rremote: Compressing objects:  38% (5/13)\u001b[K\rremote: Compressing objects:  46% (6/13)\u001b[K\rremote: Compressing objects:  53% (7/13)\u001b[K\rremote: Compressing objects:  61% (8/13)\u001b[K\rremote: Compressing objects:  69% (9/13)\u001b[K\rremote: Compressing objects:  76% (10/13)\u001b[K\rremote: Compressing objects:  84% (11/13)\u001b[K\rremote: Compressing objects:  92% (12/13)\u001b[K\rremote: Compressing objects: 100% (13/13)\u001b[K\rremote: Compressing objects: 100% (13/13), done.\u001b[K\n",
-            "remote: Total 18 (delta 3), reused 8 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects:   5% (1/18)\rReceiving objects:  11% (2/18)\rReceiving objects:  16% (3/18)\rReceiving objects:  22% (4/18)\rReceiving objects:  27% (5/18)\rReceiving objects:  33% (6/18)\rReceiving objects:  38% (7/18)\rReceiving objects:  44% (8/18)\rReceiving objects:  50% (9/18)\rReceiving objects:  55% (10/18)\rReceiving objects:  61% (11/18)\rReceiving objects:  66% (12/18)\rReceiving objects:  72% (13/18)\rReceiving objects:  77% (14/18)\rReceiving objects:  83% (15/18)\rReceiving objects:  88% (16/18)\rReceiving objects:  94% (17/18)\rReceiving objects: 100% (18/18)\rReceiving objects: 100% (18/18), done.\n",
-            "Resolving deltas:   0% (0/3)\rResolving deltas:  33% (1/3)\rResolving deltas:  66% (2/3)\rResolving deltas: 100% (3/3)\rResolving deltas: 100% (3/3), done.\n"
-          ]
-        }
+        "    print(\"Not running in Colab, nothing else is needed.\")"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "with open('test.txt', 'r') as f:\n",
-        "  print(f.read())"
-      ],
+      "execution_count": 6,
+      "id": "k_VNUu_UoK18",
       "metadata": {
-        "id": "k_VNUu_UoK18",
-        "outputId": "4d427482-ef7a-47a7-ef4c-77b397470b97",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "k_VNUu_UoK18",
+        "outputId": "4d427482-ef7a-47a7-ef4c-77b397470b97"
       },
-      "id": "k_VNUu_UoK18",
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Hola clau\n"
           ]
         }
+      ],
+      "source": [
+        "with open('test.txt', 'r') as f:\n",
+        "  print(f.read())"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": ".venv",
       "language": "python",
@@ -146,9 +88,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.12.3"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
